--- a/menu.html
+++ b/menu.html
@@ -51,7 +51,7 @@
                 <!-- Primer elemento de la carta -->
                 <div class="col-md-4">
                     <div class="card">
-                        <img class="card-img-top" src="assets/IMG_0010.jpg" alt="Waffles">
+                        <img class="card-img-top" src="assets/descarga.jpg" alt="Waffles">
                         <div class="card-body">
                             <h5 class="card-title">Nombre del Plato 1</h5>
                             <p class="card-text">Descripción del plato 1. Puedes agregar detalles sobre los
@@ -64,7 +64,7 @@
                 <!-- Segundo elemento de la carta -->
                 <div class="col-md-4">
                     <div class="card">
-                        <img class="card-img-top" src="assets/IMG_0023.jpg" alt="Waffles">
+                        <img class="card-img-top" src="assets/descarga.jpg" alt="Waffles">
                         <div class="card-body">
                             <h5 class="card-title">Nombre del Plato 2</h5>
                             <p class="card-text">Descripción del plato 2. Puedes agregar detalles sobre los
@@ -77,7 +77,7 @@
                 <!-- Tercer elemento de la carta -->
                 <div class="col-md-4">
                     <div class="card">
-                        <img class="card-img-top" src="assets/IMG_0030.jpg" alt="Waffles">
+                        <img class="card-img-top" src="assets/descarga.jpg" alt="Waffles">
                         <div class="card-body">
                             <h5 class="card-title">Nombre del Plato 3</h5>
                             <p class="card-text">Descripción del plato 3. Puedes agregar detalles sobre los
@@ -93,7 +93,7 @@
                 <!-- Primer elemento de la carta -->
                 <div class="col-md-4">
                     <div class="card">
-                        <img class="card-img-top" src="assets/IMG_0010.jpg" alt="Waffles">
+                        <img class="card-img-top" src="assets/descarga.jpg" alt="Waffles">
                         <div class="card-body">
                             <h5 class="card-title">Nombre del Plato 1</h5>
                             <p class="card-text">Descripción del plato 1. Puedes agregar detalles sobre los
@@ -106,7 +106,7 @@
                 <!-- Segundo elemento de la carta -->
                 <div class="col-md-4">
                     <div class="card">
-                        <img class="card-img-top" src="assets/IMG_0010.jpg" alt="Waffles">
+                        <img class="card-img-top" src="assets/descarga.jpg" alt="Waffles">
                         <div class="card-body">
                             <h5 class="card-title">Nombre del Plato 2</h5>
                             <p class="card-text">Descripción del plato 2. Puedes agregar detalles sobre los
@@ -119,7 +119,7 @@
                 <!-- Tercer elemento de la carta -->
                 <div class="col-md-4">
                     <div class="card">
-                        <img class="card-img-top" src="assets/IMG_0010.jpg" alt="Waffles">
+                        <img class="card-img-top" src="assets/descarga.jpg" alt="Waffles">
                         <div class="card-body">
                             <h5 class="card-title">Nombre del Plato 3</h5>
                             <p class="card-text">Descripción del plato 3. Puedes agregar detalles sobre los
@@ -135,7 +135,7 @@
                 <!-- Primer elemento de la carta -->
                 <div class="col-md-4">
                     <div class="card">
-                        <img class="card-img-top" src="assets/IMG_0010.jpg" alt="Waffles">
+                        <img class="card-img-top" src="assets/descarga.jpg" alt="Waffles">
                         <div class="card-body">
                             <h5 class="card-title">Nombre del Plato 1</h5>
                             <p class="card-text">Descripción del plato 1. Puedes agregar detalles sobre los
@@ -148,7 +148,7 @@
                 <!-- Segundo elemento de la carta -->
                 <div class="col-md-4">
                     <div class="card">
-                        <img class="card-img-top" src="assets/IMG_0010.jpg" alt="Waffles">
+                        <img class="card-img-top" src="assets/descarga.jpg" alt="Waffles">
                         <div class="card-body">
                             <h5 class="card-title">Nombre del Plato 2</h5>
                             <p class="card-text">Descripción del plato 2. Puedes agregar detalles sobre los
@@ -161,7 +161,7 @@
                 <!-- Tercer elemento de la carta -->
                 <div class="col-md-4">
                     <div class="card">
-                        <img class="card-img-top" src="assets/IMG_0010.jpg" alt="Waffles">
+                        <img class="card-img-top" src="assets/descarga.jpg" alt="Waffles">
                         <div class="card-body">
                             <h5 class="card-title">Nombre del Plato 3</h5>
                             <p class="card-text">Descripción del plato 3. Puedes agregar detalles sobre los
@@ -177,7 +177,7 @@
                 <!-- Primer elemento de la carta -->
                 <div class="col-md-4">
                     <div class="card">
-                        <img class="card-img-top" src="assets/IMG_0010.jpg" alt="Waffles">
+                        <img class="card-img-top" src="assets/descarga.jpg" alt="Waffles">
                         <div class="card-body">
                             <h5 class="card-title">Nombre del Plato 1</h5>
                             <p class="card-text">Descripción del plato 1. Puedes agregar detalles sobre los
@@ -190,7 +190,7 @@
                 <!-- Segundo elemento de la carta -->
                 <div class="col-md-4">
                     <div class="card">
-                        <img class="card-img-top" src="assets/IMG_0010.jpg" alt="Waffles">
+                        <img class="card-img-top" src="assets/descarga.jpg" alt="Waffles">
                         <div class="card-body">
                             <h5 class="card-title">Nombre del Plato 2</h5>
                             <p class="card-text">Descripción del plato 2. Puedes agregar detalles sobre los
@@ -203,7 +203,7 @@
                 <!-- Tercer elemento de la carta -->
                 <div class="col-md-4">
                     <div class="card">
-                        <img class="card-img-top" src="assets/IMG_0010.jpg" alt="Waffles">
+                        <img class="card-img-top" src="assets/descarga.jpg" alt="Waffles">
                         <div class="card-body">
                             <h5 class="card-title">Nombre del Plato 3</h5>
                             <p class="card-text">Descripción del plato 3. Puedes agregar detalles sobre los
